# netavark-plugin-pond

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  INSTALL.md  README.md  SECURITY.md  SUPPORT.md  cliff.toml  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  cd.yml  ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
examples/: create.json  setup.json
openspec/changes/add-plugin-tests/: design.md  proposal.md
openspec/changes/archive/2026-02-24-add-plugin-tests/: tasks.md
openspec/changes/archive/2026-02-24-add-plugin-tests/specs/plugin-testing/: spec.md
openspec/changes/archive/2026-02-24-implement-pond-netns-plugin/: proposal.md  tasks.md
openspec/changes/archive/2026-02-24-implement-pond-netns-plugin/specs/network-lifecycle/: spec.md
openspec/changes/archive/2026-03-04-fix-route-before-up/: proposal.md  tasks.md
openspec/changes/archive/2026-03-04-fix-route-before-up/specs/deployment-workflow/: spec.md
openspec/changes/archive/2026-03-04-garp-on-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-04-garp-on-setup/specs/arp-announce/: spec.md
openspec/changes/archive/2026-03-04-garp-on-setup/specs/network-lifecycle/: spec.md
openspec/changes/fix-route-before-up/: design.md
openspec/changes/fix-route-before-up/specs/network-lifecycle/: spec.md
openspec/changes/implement-pond-netns-plugin/: design.md  tasks.md
openspec/specs/netns-configuration/: spec.md
openspec/specs/network-lifecycle/: spec.md
openspec/specs/ovs-integration/: spec.md
openspec/specs/plugin-testing/: spec.md
src/net_ns/: arp.rs  driver.rs  mod.rs  options.rs  plumbing.rs  tuning.rs
