[package]
name = "netavark-plugin-pond"
version = "1.0.0"
edition = "2021"
description = "Netavark plugin to create a custom network whose backing underlay is just a kernel namespace with the objective that all containers share the same network infrastructure. This is simpler than the usual bridged broadcast domain where different containers share a single network interface."
repository = "https://github.com/metastructures/netavark-plugin-pond"
license = "Apache-2.0"

[dependencies]
crc32fast = "1.4"
ipnet = "2.12.0"
netavark = "1.10.3"
netlink-packet-core = "0.8.1"
netlink-packet-route = "0.25.1"
netlink-sys = "0.8.5"
nix = { version = "0.29", features = ["sched"] }
pnet_datalink = "0.35.0"
pnet_packet = "0.35.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[package.metadata.cross.build]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install protobuf-compiler:$CROSS_DEB_ARCH libprotobuf-dev:$CROSS_DEB_ARCH",
]
